--- a/Demo.API/appsettings.json
+++ b/Demo.API/appsettings.json
@@ -12,6 +12,6 @@
   "JWT": {
     "issuer": "http://localhost:7191",
     "audience": "https://frontend.com",
-    "secretKey": "$TAR0NE_isSecurityKey_Validator863348#*44059br~/*-%65^6943G0.2"
+    "secretKey": ""
   }
 }
