--- a/Demo.API/appsettings.json
+++ b/Demo.API/appsettings.json
@@ -10,7 +10,7 @@
     "Default": "Server=.;Database=Volunteering_sys;Integrated Security=True;Encrypt=False;Trust Server Certificate=True;MultipleActiveResultSets=True;"
   },
   "JWT": {
-    "issuer": "http://localhost:7191",
+    "issuer": "https://localhost:7227",
     "audience": "https://frontend.com",
     "secretKey": "$TAR0NE_isSecurityKey_Validator863348#*44059br~/*-%65^6943G0.2"
   }
