--- a/Demo.API/appsettings.json
+++ b/Demo.API/appsettings.json
@@ -11,7 +11,7 @@
   },
   "JWT": {
     "issuer": "https://localhost:7227",
-    "audience": "https://frontend.com",
-    "secretKey": "$TAR0NE_isSecurityKey_Validator863348#*44059br~/*-%65^6943G0.2"
+    "audience": "https://hansofhopee.org",
+    "secretKey": "Heheheehehehehehe, this is not my key"
   }
 }
